--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Greece.html">
+    <link rel="stylesheet" href="Japan.html">
     <title>needs a name</title>
 </head>
 <body>
@@ -12,23 +14,25 @@
      <h2>Travel agency</h2>
     </div>
     <div>
-    <a href="#">Greece</a>
-
-    <a href="#">Japan</a>
+    <a href="Greece.html">Greece</a>
+    <a href="Japan.html">Japan</a>
     </div>
         
 
     </div>
-    <h1>TA</h1>
-    <img src="travel agency 1.avif" alt="man sat down on backless chair looking to his right out a window whilest on the phone">
+        <div class="img">
+        <img src="travel agency 1.avif" alt="man sat down on backless chair looking to his right out a window whilest on the phone">
+           </div>
+           <h1> Welcome to ___________________</h1>
+    <p>welcome to our travel agency we have some wonderful places that may be to your liking as a place to be able to get some nice R&R</p>
+    <Footer> Facebook  X  linkedin  instagram</Footer>
+
+
     
-    <p>prices of flights</p>
-
-    <div id="footer">
 
 
 
-    </div>
+
 
 
 
