--- a/travel agency/Greece.html
+++ b/travel agency/Greece.html
@@ -8,7 +8,49 @@
     <link rel="stylesheet" href="Japan.html">
     <title>Document</title>
 </head>
-<body>
-    
+<div id="navbar">
+<div>
+<h2>Travel agency</h2>
+</div>
+<div>
+<a href="index.html">Homepage</a>
+<a href="Japan.html">Japan</a>
+<a href="contact.html">contact us</a>
+</div>
+</div>
+
+
+
+
+
+<h1>Greece</h1>
+<p>we have nice villas to enjoy the views, relaxing areas to unwind.
+    there are attractions that people from around the world come to see. </p>
+<img id="Greeceimg" src="Greece1.avif" alt=""> <img src="Greece2.avif" alt=""> <img src="Greece3.avif" alt="">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+<body>      
 </body>
 </html>
