--- a/travel agency/Japan.html
+++ b/travel agency/Japan.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="Greece.html">
     <title>Document</title>
 </head>
+<div id="navbar">
+    <div>
+     <h2>Travel agency</h2>
+    </div>
+    <div>
+    <a href="index.html">Homepage</a>
+    <a href="Greece.html">Greece</a>
+    <a href="contact.html">contact us</a>
+    </div>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
 <body>
     
 </body>
