--- a/Greece.html
+++ b/Greece.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="Japan.html">
     <title>Document</title>
 </head>
+<div id="navbar">
+    <div>
+        <h2>Travel agency</h2>
+    </div>
+    <div>
+        <a href="index.html">Homepage</a>
+        <a href="Japan.html">Japan</a>
+        <a href="contact.html">contact us</a>
+    </div>
+    </div>
+
+
+
+
+
+
+<h1>Greece</h1>
+<p>we have nice villas to enjoy the views, relaxing areas to unwind.
+    there are attractions that people from around the world come to see. </p>
+<div id="gre">
+    <img class="gre1" src="Greece1.avif" alt="">
+     <img class="gre2" src="Greece2.avif" alt="">
+      <img class="gre3" src="Greece3.avif" alt="">
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <body>
-    
 </body>
+
 </html>
