--- a/Japan.html
+++ b/Japan.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+
+
+    <div id="navbar">
+        <h2>Travel agency</h2>
+        <a href="index.html">Homepage</a>
+        <a href="Greece.html">Greece</a>
+        <a href="contact.html">Contact us</a>
+    </div>
+
+
+
+    <h1>Japan</h1>
+
+    <p>Japan is an island country in East asia. Located in the pacific ocean
+        <BR> off the east coast of the Asian mainland, it is bordered
+        <BR>to the west of Japan and extends from the sea of Okhotsk in the north
+        to the East of China sea in the south
+    </p>
+
+    <p>This beautiful country is made up of 6,800 islands. Japan itself is a country
+        <br> for all walks of life. If you like hiking and mountain climbing, you
+        <br>could visit mount fuji. For those who like history of different cultures
+        <br>may want to visit the imperial palace in tokyo.
+
+    </p>
+
+
+
+
+
+    <div id="jappa">
+
+        <img class="jap1" src="Japan1.avif">
+
+        <img class="jap2" src="Japan2.avif">
+
+        <img class="jap3" src="Japan3.avif">
+
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <footer>
+        <div class="navbar">
+
+            <a href="#">facebook</a>
+
+            <a href="#">twitter</a>
+
+            <a href="#">instagram</a>
+
+        </div>
+
 </body>
+
 </html>
