--- a/Greece.html
+++ b/Greece.html
@@ -11,14 +11,14 @@
 </head>
 <div id="navbar">
     <div>
-        <h2>Travel agency</h2>
+        <h2>Gamers travel spots</h2>
     </div>
     <div>
         <a href="index.html">Homepage</a>
         <a href="Japan.html">Japan</a>
         <a href="contact.html">contact us</a>
     </div>
-    </div>
+</div>
 
 
 
@@ -27,11 +27,12 @@
 
 <h1>Greece</h1>
 <p>we have nice villas to enjoy the views, relaxing areas to unwind.
-    there are attractions that people from around the world come to see. </p>
+    there are attractions that people from around the world come to see, there are sites that you could visit from your
+    favourite games that inspired you to look at the wonders of the country.</p>
 <div id="gre">
     <img class="gre1" src="Greece1.avif" alt="">
-     <img class="gre2" src="Greece2.avif" alt="">
-      <img class="gre3" src="Greece3.avif" alt="">
+    <img class="gre2" src="Greece2.avif" alt="">
+    <img class="gre3" src="Greece3.avif" alt="">
 
 
 
