--- a/Japan.html
+++ b/Japan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -13,7 +13,7 @@
 
 
     <div id="navbar">
-        <h2>Travel agency</h2>
+        <h2>Gamers travel spots</h2>
         <a href="index.html">Homepage</a>
         <a href="Greece.html">Greece</a>
         <a href="contact.html">Contact us</a>
