--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <div id="navbar">
     <div>
-        <h2>Travel agency</h2>
+        <h2>Gamers travel spots</h2>
     </div>
     <div>
         <a href="index.html">Homepage</a>
@@ -25,6 +25,12 @@
 </p>
 <p> Phone number 07*** *** ***
     e-mail ***************@*******.com</p>
+    <P>
+        our location is ** *********** ************
+        postcode *** ***
+    </P>
+
+
 
 
 
