--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Greece.html">
     <link rel="stylesheet" href="Japan.html">
-    <title>needs a name</title>
+    <title>Gamers travel spots</title>
 </head>
 
 <body>
     <div id="navbar">
         <div>
-            <h2>Travel agency</h2>
+            <h2>Gamers travel spots</h2>
         </div>
         <div>
             <a href="Greece.html">Greece</a>
@@ -27,7 +27,7 @@
         <img src="travel agency 1.avif"
             alt="man sat down on backless chair looking to his right out a window whilest on the phone">
     </div>
-    <h1> Welcome to ___________________</h1>
+    <h1> Welcome to Gamers travel spots </h1>
     <p>welcome to our travel agency we have some wonderful places that may be to your liking as a place to be able to
         get some nice R&R</p>
     <Footer> Facebook X linkedin instagram</Footer>
